microservices/users-api/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    app: users-api
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
