microservices/users-api/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    app: users-api
  ports:
    - protocol: TCP
      port: 80
      name: users-api
    - protocol: TCP
      port: 15672
      name: rabbitmq
  type: ClusterIP
